--- a/src/css/goodslist.css
+++ b/src/css/goodslist.css
@@ -13,11 +13,13 @@
 
 #mainx ul { width: 100%; height: 37px; border: 2px solid #ddd; margin-top: 10px; }
 
-#mainx ul li { float: left; }
+#mainx ul li { float: left; cursor: pointer; }
 
 #mainx ul li span { display: block; line-height: 36px; height: 36px; text-align: center; border-right: 1px solid #ddd; padding: 0 20px; }
 
 #mainx ul li span i { padding-left: 5px; color: #727272; }
+
+#mainx ul li span .active { color: #F7AD00; }
 
 #mainx .goodslist, #mainx .bestgoods { width: 100%; clear: both; }
 
@@ -35,9 +37,13 @@
 
 #mainx .goodslist i, #mainx .bestgoods i { margin-right: 5px; }
 
-#mainx .goodslist .span1, #mainx .bestgoods .span1 { position: absolute; left: 0; bottom: 0; width: 111px; height: 30px; background: #F6AB00; line-height: 30px; height: 30px; text-align: center; color: #fff; }
+#mainx .goodslist .span1, #mainx .bestgoods .span1 { position: absolute; left: 0; bottom: 0; width: 111px; height: 30px; background: #F6AB00; line-height: 30px; height: 30px; text-align: center; color: #fff; cursor: pointer; }
 
-#mainx .goodslist .span2, #mainx .bestgoods .span2 { position: absolute; right: 0; bottom: 0; width: 111px; height: 30px; background: #33A1DB; line-height: 30px; height: 30px; text-align: center; color: #fff; }
+#mainx .goodslist .span2, #mainx .bestgoods .span2 { position: absolute; right: 0; bottom: 0; width: 111px; height: 30px; background: #33A1DB; line-height: 30px; height: 30px; text-align: center; color: #fff; cursor: pointer; }
+
+#mainx .goodslist .page span, #mainx .bestgoods .page span { display: inline-block; margin: 5px; width: 40px; line-height: 1.8; text-align: center; background-color: #dfdfdf; color: #666; cursor: pointer; }
+
+#mainx .goodslist .page span.active, #mainx .bestgoods .page span.active { background-color: #fc0; color: #fff; }
 
 #mainx .best p { height: 40px; background: #33A1DB; margin-top: 40px; padding-left: 10px; }
 
