--- a/src/sass/goodslist.scss
+++ b/src/sass/goodslist.scss
@@ -13,10 +13,15 @@ $mainColor:#33A1DB;
     }
 
     ul{width: 100%;height: 37px;border:2px solid #ddd;margin-top:10px;
-        li{float:left;
+        li{float:left;cursor:pointer;
 
             span{display: block;line-height:36px;height:36px;text-align: center;border-right:1px solid #ddd;padding:0 20px;
-                i{padding-left:5px;color:#727272;}
+                i{padding-left:5px;color:#727272;
+
+                    
+                }
+                .active{color:#F7AD00;}
+                
             }
         }
     }
@@ -46,12 +51,15 @@ $mainColor:#33A1DB;
         }
 
             i{margin-right:5px;}
-            .span1{position:absolute;left:0;bottom:0;width: 111px;height: 30px;background:#F6AB00;line-height:30px;height: 30px;text-align: center;color:#fff;
+            .span1{position:absolute;left:0;bottom:0;width: 111px;height: 30px;background:#F6AB00;line-height:30px;height: 30px;text-align: center;color:#fff;cursor:pointer;
             }
-            .span2{position:absolute;right:0;bottom:0;width: 111px;height: 30px;background:$mainColor;line-height:30px;height: 30px;text-align: center;color:#fff;}
+            .span2{position:absolute;right:0;bottom:0;width: 111px;height: 30px;background:$mainColor;line-height:30px;height: 30px;text-align: center;color:#fff;cursor:pointer;}
+   
+    
+
+        .page span{display:inline-block;margin:5px;width:40px;line-height:1.8;text-align: center;background-color:#dfdfdf;color:#666;cursor:pointer;}
+        .page span.active{background-color:#fc0;color:#fff;}
     }
-
-
      
     
     .best{
@@ -68,7 +76,7 @@ $mainColor:#33A1DB;
     }
 
 
-   
+   // .goodslist  div.page {margin-left:200px;}
 
 }
 
